# eliminability-diagnostic

./: README.md
eliminability_diagnostic/: LICENSE  pyproject.toml
eliminability_diagnostic/eliminability/: plotting.py
eliminability_diagnostic/examples/: sample_signal.csv  smoothness_demo.py
eliminability_diagnostic/notebooks/: eliminability_demo.ipynb
eliminability_diagnostic/tests/: test_toy_demo.py
eliminability_diagnostic_UPLOAD_CONTENTS/: CITATION.cff  README.md  main.py
eliminability_diagnostic_UPLOAD_CONTENTS/eliminability/: __init__.py  cli.py  data_models.py  demos.py  discriminants.py  metrics.py  persistence.py  postures.py  reconstruction.py  reporting.py
eliminability_diagnostic_UPLOAD_CONTENTS/examples/: infrasound_transient_demo.py  sample_components.csv  toy_signal_demo.py
eliminability_diagnostic_UPLOAD_CONTENTS/notebooks/: _build_notebook.py
eliminability_diagnostic_UPLOAD_CONTENTS/tests/: test_edge_cases.py
